[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/ButtonPauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/ButtonPauseMenuRed.tscn" type="PackedScene" id=2]
[ext_resource path="res://main_menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/menu.png" type="Texture" id=4]
[ext_resource path="res://font/AmazingKids.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/help.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[node name="TitleScreen" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="TextureRect" parent="."]
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 652.0
margin_top = 16.0
margin_right = 708.0
margin_bottom = 103.0
rect_scale = Vector2( 0.6, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 56.0
margin_bottom = 87.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )

[node name="Play" parent="." instance=ExtResource( 1 )]
margin_left = 343.869
margin_top = 187.403
margin_right = 417.869
margin_bottom = 224.403
custom_fonts/font = SubResource( 1 )
text = "PLAY"

[node name="About" parent="." instance=ExtResource( 1 )]
margin_left = 345.114
margin_top = 239.036
margin_right = 419.114
margin_bottom = 276.036
custom_fonts/font = SubResource( 2 )
text = "ABOUT"

[node name="Quit" parent="." instance=ExtResource( 2 )]
margin_left = 345.638
margin_top = 291.465
margin_right = 419.638
margin_bottom = 328.465
custom_fonts/font = SubResource( 3 )
text = "QUIT"

[node name="Button" parent="." instance=ExtResource( 2 )]
margin_left = 31.3726
margin_top = 29.2426
margin_right = 136.373
margin_bottom = 66.2426
custom_fonts/font = SubResource( 4 )
text = "Halo, Denta"
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
